--- a/package.json
+++ b/package.json
@@ -13,9 +13,20 @@
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
   },
   "dependencies": {
+    "@emotion/react": "^11.13.5",
+    "@emotion/styled": "^11.13.5",
+    "@types/react": "^18.3.12",
+    "@types/react-dom": "^18.3.1",
     "gatsby": "^5.14.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "gatsby-plugin-emotion": "^8.14.0",
+    "gatsby-plugin-typography": "^5.14.0",
+    "gatsby-source-filesystem": "^5.14.0",
+    "gatsby-transformer-remark": "^6.14.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-typography": "^0.16.23",
+    "typescript": "^5.7.2",
+    "typography": "^0.16.24"
   },
   "repository": {
     "type": "git",
