--- a/package.json
+++ b/package.json
@@ -19,12 +19,16 @@
     "@types/react-dom": "^18.3.1",
     "gatsby": "^5.14.0",
     "gatsby-plugin-emotion": "^8.14.0",
+    "gatsby-plugin-eslint": "^4.0.4",
+    "gatsby-plugin-image": "^3.14.0",
+    "gatsby-plugin-sharp": "^5.14.0",
     "gatsby-plugin-typography": "^5.14.0",
     "gatsby-source-filesystem": "^5.14.0",
     "gatsby-transformer-remark": "^6.14.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-typography": "^0.16.23",
+    "styled-components": "^6.1.13",
     "typescript": "^5.7.2",
     "typography": "^0.16.24"
   },
@@ -34,5 +38,11 @@
   },
   "bugs": {
     "url": "https://github.com/gatsbyjs/gatsby/issues"
+  },
+  "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^8.17.0",
+    "@typescript-eslint/parser": "^8.17.0",
+    "eslint": "^9.16.0",
+    "eslint-webpack-plugin": "^4.2.0"
   }
 }
