--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@emotion/styled": "^11.13.5",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
+    "date-fns": "^4.1.0",
     "gatsby": "^5.14.0",
     "gatsby-plugin-emotion": "^8.14.0",
     "gatsby-plugin-eslint": "^4.0.4",
